sandc/test/fixtures/astRegression/shouldFail/productions/statement/WhileExpression.sand
pub class WhileExpression {
    foo() {
        while cond {
            foo
        }
    }
}